# auto-fluidics

./: .gitignore  README.md  app.py  auto-fluidics.code-workspace  batch_video_extract.py  pyproject.toml  requirements.txt  train_regime_classifier.py  validate_detection.py
bacha_vision/: __init__.py
bacha_vision/classification/: __init__.py  ml_classifier.py  regime_detector.py
bacha_vision/detection/: __init__.py  droplet_detector.py
dashboard/: app.py
examples/: demo_detector.py  demo_enhanced_detection.py  stream_demo.py
img/: rename_images.sh
perception/: __init__.py  encapsulation_detector.py  ml_regime_classifier.py
processing/: channel_detector.py  glob.ipynb  particle-detector.py  particle_detector.py  particle_streamer.py
scripts/: check_setup.py  extract_video.py  label_data.py  train_classifier.py  validate.py
